# nanoservice-template

./: .dockerignore  Dockerfile  README.md
clients/http/: Cargo.toml
clients/http/src/: main.rs
clients/tcp/: Cargo.toml
clients/tcp/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
kernel/: Cargo.toml
kernel/src/: lib.rs
servers/actix/: Cargo.toml
servers/actix/src/: lib.rs  main.rs  routing.rs
servers/axum/: Cargo.toml
servers/axum/src/: lib.rs  main.rs  routing.rs
servers/tcp/: Cargo.toml
servers/tcp/src/: lib.rs  main.rs  routing.rs
