[package]
name = "actix-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.7.0"
env_logger = "0.11.3"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
nanoservices-utils = { version = "0.1.2", features = ["actix"] }
kernel = { path = "../../kernel" }
core = { path = "../../core" }
