[package]
name = "tcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
nanoservices-utils = "0.1.2"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
bincode = "1.3.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.6.0"
futures = "0.3.30"

kernel = { path = "../../kernel" }
core = { path = "../../core" }